# Aetos.Orchestrator

./: .env.example  .gitignore  AzuriteConfig  Dockerfile  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  docker-compose.yml  function_app.py  host.json  pyproject.toml  requirements.txt  run.py  run.sh
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py
scripts/: deploy.sh  fix.sh  logs.sh  start.sh  stop.sh
src/: config.py
src/api/: dependencies.py  main.py
src/api/routes/: admin.py  health.py  webhooks.py
src/api/schemas/: listing_responses.py  scraper_webhook.py
src/application/coordinators/: chatterbot_coordinator.py  ebay_coordinator.py  scraper_coordinator.py
src/application/interfaces/: event_publisher.py  listing_repository.py  service_coordinator.py  state_history_repository.py
src/application/use_cases/: create_listings_from_scraper.py  get_listing_history.py  transition_listing_state.py
src/domain/entities/: product_listing.py
src/domain/enums/: listing_state.py
src/domain/events/: domain_events.py
src/domain/state_machine/: lifecycle_state_machine.py
src/infrastructure/azure/: container_manager.py
src/infrastructure/database/: connection.py  models.py
src/infrastructure/external_services/: scraper_client.py  scraper_coordinator.py
src/infrastructure/messaging/: noop_publisher.py  (+3 more)
tests/integration/: test_api.py
tests/unit/: test_product_listing_entity.py  test_state_machine.py  test_use_cases.py
(+6 files in other folders)
